<resources>
    <string name="app_name">MyWaste</string>
    <string name="dashboard">Dashboard</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="direction">Direction</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User_Name</string>
    <string name="get_location">Get Location</string>
    <string name="location">Location</string>

</resources>
