<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DashboardActivity"
    android:background="#90CF91">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/dashboard"
    android:gravity="center"
    android:textSize="30sp"
    android:fontFamily="cursive"
    />



    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/LocationTextViewTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:textSize="20sp"
        android:background="#C5BDBD"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/get_location"
            android:textSize="23sp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"

            />

    </LinearLayout>

    <fragment
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:context="com.example.android.mywaste.DashboardActivity"
        />



</LinearLayout>